--- a/Mvcapp/myapp/Views/Shared/_Layout.cshtml
+++ b/Mvcapp/myapp/Views/Shared/_Layout.cshtml
@@ -31,6 +31,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Employee" asp-action="AddEmployee">Add Employee</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Employee" asp-action="DelEmp">Delete Employee</a>
+                        </li>
                     </ul>
                 </div>
             </div>
